// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyListPlaceholder _opt prop should render the empty-filter placeholder if passed 1`] = `
<View
  style={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={undefined}
  >
    No item found! You may add a new one
  </Text>
</View>
`;

exports[`EmptyListPlaceholder _opt prop should render the empty-list placeholder if passed 1`] = `
<View
  style={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={undefined}
  >
    Your list is empty!
  </Text>
</View>
`;
